Fixed trip list background color on iOS.

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -22,6 +22,9 @@
 ion-content.cards-background {
   background-color: #eeeeee;
 }
+ion-content.list-background {
+  background-color: #ffffff;
+}
 
 /* Map markers */
 .marker-current {
